<resources>
    <string name="ru_language">Русский</string>
    <string name="en_language">English</string>
    <string name="language">Language:</string>
    <string name="app_name">Inspiration Point</string>
    <string name="title" translatable="false">inspiration point</string>
    <string name="login">Enter</string>
    <string name="registration">Registration</string>
    <string name="main">Inspiration Point</string>
    <string name="fight">Bout</string>
    <string name="fight_result_title" formatted="false">%s %d : %d %s</string>
    <string name="new_fight">New fight</string>
    <string name="training_sessions">Sessions</string>
    <string name="training_session">Session</string>
    <string name="comments">Comments</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about_app">About</string>
    <string name="after_the_fight">after the fight</string>
    <string name="prompt_filter">Search by date</string>
    <string name="list_is_empty">The list is empty</string>
    <string name="diary_list_is_empty">No entries</string>
    <string name="no_comments">There are no comments</string>
    <string name="trainer_filter">Search filter</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="fight_count">Fights: %d</string>
    <string name="fighter_names" formatted="false">%s - %s</string>
    <string name="fighter_score" formatted="false">%d : %d</string>
    <string name="action_sign_in">Enter</string>
    <string name="action_register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_nick">Nick</string>
    <string name="prompt_phone">Phone number</string>
    <string name="weapon_type">Weapon type</string>
    <string name="man">M</string>
    <string name="woman">F</string>
    <string name="category">Category</string>
    <string name="trainers">Coaches</string>
    <string name="new_coach_hint">Coach</string>
    <string name="new_friend_hint">Friend</string>
    <string name="statistic_access">Statistic access</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Surname, name</string>
    <string name="club_selector">Club</string>
    <string name="error_field_required">Required field</string>
    <string name="wrong_email">E-mail format is incorrect</string>
    <string name="success_registration_message">Registration successfully completed. The login password has been sent by e-mail.</string>
    <string name="error">Error</string>
    <string name="not_selected_club">No club specified</string>
    <string name="read_clubs_error">List of clubs loading error: \"%s\"</string>
    <string name="read_profile_error">Profile loading error: \"%s\"</string>
    <string name="registration_error">Registration error</string>
    <string name="read_coaches_error">Coaches list loading error: \"%s\"</string>
    <string name="read_friends_error">Subscribers list loading error: \"%s\"</string>
    <string name="read_trainings_error">Sessions list loading error: \"%s\"</string>
    <string name="save_profile_error">Profile saving error: \"%s\"</string>
    <string name="save_coaches_error">Coaches list saving error: \"%s\"</string>
    <string name="save_friends_error">Subscribers list saving error: \"%s\"</string>
    <string name="add_friends_error">Subscribers list adding error: \"%s\"</string>
    <string name="login_error">Login error</string>
    <string name="reset_complete">Password was successfully updated. A new password has been sent by e-mail.</string>
    <string name="reset_error">Reset password error</string>
    <string name="invalid_user_and_password">Incorrect combination of login and password.</string>
    <string name="invalid_email">The specified email address is not registered.</string>
    <string name="email_exist">The specified email address is already registered.</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="duration">Duration:</string>
    <string name="referee">Referee:</string>
    <string name="place">Place:</string>
    <string name="left_fighter_hint">Left fighter</string>
    <string name="right_fighter_hint">Right fighter</string>
    <string name="enter_users_name">Enter the names of both participants</string>
    <string name="save_fight_error">Saving fight results on server - error: \"%s\"</string>
    <string name="save_comments_error">Saving comments error: \"%s\"</string>
    <string name="detect_location">detect location</string>
    <string name="location_not_permitted">Location detection is not available</string>
    <string name="not_detected">Not detected</string>
    <string name="training_format">Session %d</string>
    <string name="fight_format">Fight %d</string>
    <string name="name_format">Name %d</string>
    <string name="pause">Pause</string>
    <string name="other_period">Free time</string>
    <string name="extra_round">A</string>
    <string name="start_fight">Fight!</string>
    <string name="stop_fight">Stop fight</string>
    <string name="exit_conformation">Fight data is not saved. Are you sure you want to quit?</string>
    <string name="reset_conformation">Are you sure you want to reset password?</string>
    <string name="winner_not_detected_title">The winner is not determined</string>
    <string name="winner_not_detected">To save the fight one of the participants must have an advantage in either points or priority.</string>
    <string name="not_started_fight_title">The fight is not started</string>
    <string name="not_started_fight">To save the fight data the timer must be started.</string>
    <string name="fight_time">3 minutes</string>
    <string name="pause_time">Pause 1 minute</string>
    <string name="extra_time">Extra time</string>
    <string name="other_time">Other time</string>
    <string name="next_period">Next period</string>
    <string name="reset_period">Reset</string>
    <string name="period">Period %d</string>
    <string name="about_app_ver">Version %s</string>
    <string name="about_address">Inspiration Point\n197374, Saint-Petersburg, Russia, Primorsky pr. 139-25</string>
    <string name="about_manager">Feedback:</string>
    <string name="about_instruction">Instruction for Inspiration Point App</string>
    <string name="about_mail_us">Email us</string>
    <string name="about_app_mail_link">mailto:support@inspirationpoint.ru</string>
    <string name="about_app_web_link">https://drive.google.com/file/d/1_yeHX45076mQvYMmnnw4JyOCJtn4hgbm/view?usp=sharing</string>
    <string name="intent_error">Is not supported on your device.</string>
    <string name="line">Line %d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_diary">Diary</string>
    <string name="action_sync">Synchronization</string>
    <string name="action_time">Time</string>
    <string name="action_period">Period</string>
    <string name="action_priority">Priority</string>
    <string name="action_add_comment">Comment</string>
    <string name="action_change_points">Change score</string>
    <string name="action_cards">Warnings</string>
    <string name="action_reset">Reset</string>
    <string name="action_end_fight">End fight</string>
    <string name="action_apply">Apply</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning!</string>
    <string name="priority_title">priority</string>
    <string name="card_title">Warnings</string>
    <string name="time_period">Period time</string>
    <string name="select_period">Select period</string>
    <string name="change_score">Change score</string>
    <string name="comment">Comment</string>
    <string name="line_select">Select line</string>
    <string name="user_select">User selection</string>
    <string name="count_period">period</string>
    <string name="reset_to_three_mins_confirm">"Reset timer to 3:00? "</string>
    <string name="action_pause">Pause (1 min)</string>
    <string name="pause_confirmation">Set pause to 1 minute?</string>
    <string name="reset_confirm">Reset</string>
    <string name="score">score</string>
    <string name="action">Action:</string>
    <string name="start_time">Start time:</string>
    <string name="full_time">Full time:</string>
    <string name="pure_time">Pure time:</string>
    <string name="point_left">Point left</string>
    <string name="point_right">Point right</string>
    <string name="yc_left">YC left</string>
    <string name="yc_right">YC right</string>
    <string name="rc_left">RC left</string>
    <string name="rc_right">RC right</string>
    <string name="set_time">Time: %s</string>
    <string name="reset">Reset</string>
    <string name="priority_left">Priority left</string>
    <string name="priority_right">Priority right</string>
    <string name="end_fight">End of fight</string>
    <string name="end_fight_confirm">Finish the fight?</string>
    <string name="date_pick">Choose date(s)</string>
    <string name="diary_fighters_is_empty">There are no available fighters</string>
    <string name="fighter_filter">Search by name</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="group">Group</string>
    <string name="enter_all_names">Enter the names of all participants</string>
    <string name="surname_name">Surname, name</string>
    <string name="next_pair">Next pair:</string>
    <string name="swap_fighters">Swap fighters</string>
    <string name="limit_warning">You have reached the limit of 100 fights in the device memory. From now on, the oldest battles will be overwritten with new ones. We are working to remove this limit. Thank you for understanding.</string>
    <string name="email" translatable="false">E-mail: support@inspirationpont.ru</string>
    <string name="telegram" translatable="false">"Telegram: "</string>
    <string name="pause_cancel_confirmation">Finish pause?</string>
    <string name="type_saber">Sabre</string>
    <string name="type_foil">Foil</string>
    <string name="type_epee">Epee</string>
    <string name="nav_messages">Messages</string>
    <string name="users_load_error">Could not load user list, no internet connection</string>
    <string name="register_confirm">Haven\'t registered yet?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="enter_email">Enter your email address</string>
    <string name="pass_reset">Password reset</string>
    <string name="sign_out">Sign out</string>
    <string name="choose_event">Fencing action</string>
    <string name="confirm_event">Comfirm action?</string>
    <string name="group_results_title">Group results</string>
    <string name="pdf_button">.PDF</string>
    <string name="document_created">Document created successfully:</string>
    <string name="no_added_subscribers">No added subscribers</string>
    <string name="subscribers">Subscribers</string>
    <string name="add_subscriber">Add subscriber</string>
    <string name="delete_user_confirm">from subscribers?</string>
    <string name="delete">Delete</string>
    <string name="off">Off</string>
    <string name="mode_camera">Record video</string>
    <string name="selected_cam">Camera: %s</string>
    <string name="video_translation">Video replay translation:</string>
    <string name="save_video">Store video</string>
    <string name="done">Done</string>
    <string name="reserve_referee">Reserve referee</string>
    <string name="semi_1_0"> </string>
    <string name="fight_end_ask">Finish fight?</string>
</resources>