<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/textColorSecondary"
        android:textSize="22sp"
        android:id="@+id/semi_title"
        android:layout_gravity="center_horizontal"
        android:text="@string/semi_1_0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:text="@string/fight_end_ask"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="23sp"
            android:id="@+id/fight_ask_finish"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="23sp"
            android:id="@+id/fight_ask_cancel"/>
    </LinearLayout>

</LinearLayout>