<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weapon_epee"
        android:text="@string/type_epee"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:textSize="@dimen/large_font_size"
        android:textColor="@color/textColorSecondary"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weapon_rapier"
        android:text="@string/type_foil"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:textSize="@dimen/large_font_size"
        android:textColor="@color/textColorSecondary"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weapon_saber"
        android:text="@string/type_saber"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:textSize="@dimen/large_font_size"
        android:textColor="@color/textColorSecondary"/>

</LinearLayout>