<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ViewStub
        android:id="@+id/viewStub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@+id/inflate" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/ru_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="viewStart"
                android:text="@string/ru_language"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:background="@color/transparent"/>

            <Button
                android:id="@+id/en_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="viewStart"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:text="@string/en_language"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:background="@color/transparent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:background="@drawable/divider" />

            <CheckBox
                android:id="@+id/sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:textSize="16sp"
                android:layoutDirection="rtl"
                android:text="@string/sound" />

            <CheckBox
                android:id="@+id/vibration"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layoutDirection="rtl"
                android:text="@string/vibration" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:id="@+id/theme_switch"
                android:textSize="16sp"
                android:text="@string/theme" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
