<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:weightSum="16"
        android:background="@color/colorPrimaryThemeDark">

        <TextView
            android:id="@+id/fight_result_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="4dp"
            android:text="@string/time"
            android:lines="1"
            android:textColor="@color/white"
            android:textAlignment="viewStart" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/score"
            android:id="@+id/fight_result_score"
            android:textAlignment="viewStart"
            android:lines="1"
            android:textColor="@color/white"
            android:paddingLeft="4dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/fight_action_label"/>

        <TextView
            android:id="@+id/fight_result_action"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:paddingLeft="5dp"
            android:text="@string/action"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/white"
            android:textAlignment="viewStart" />

        <ImageView
            android:id="@+id/fight_result_video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingLeft="5dp"
            android:paddingTop="-7dp"
            android:paddingBottom="-7dp"
            android:scaleType="centerInside"
            android:src="@drawable/vid_dark_icon"/>

    </LinearLayout>

</LinearLayout>