<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true">

    <ViewStub
        android:id="@+id/viewStub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@+id/inflate" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_about_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/about_logo" />

            <TextView
                android:id="@+id/about_app_ver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Версия SM-01"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/about_app_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/about_instruction"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginTop="16dp"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginBottom="4dp"
                android:background="@drawable/divider" />

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
                <!--android:text="@string/about_address"-->
                <!--android:textSize="16sp" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/about_manager"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/about_app_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/about_app_telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/telegram"
                android:textIsSelectable="true"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
